Fix spacing issue with header and main element

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ header {
   }
 
   #info-circle div {
-    padding: 40px 50px;
+    padding: 150px 50px;
   }
 }
 
